# AI-DevOps-Kubernetes-Agent

ai-kubernetes-agent/: README.md  docker-compose.yml
ai-kubernetes-agent/backend/: Dockerfile  pyproject.toml
ai-kubernetes-agent/backend/app/: main.py
ai-kubernetes-agent/backend/app/ai/: reasoner.py
ai-kubernetes-agent/backend/app/api/routes/: health.py
ai-kubernetes-agent/backend/app/core/: config.py  logging.py
ai-kubernetes-agent/backend/app/kubernetes/: inspector.py
ai-kubernetes-agent/backend/app/models/: investigation.py
ai-kubernetes-agent/backend/app/services/: investigation_service.py
ai-kubernetes-agent/frontend/: package.json
ai-kubernetes-agent/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ai-kubernetes-agent/frontend/src/components/: InvestigateButton.tsx
ai-kubernetes-agent/frontend/src/hooks/: useInvestigateCluster.ts
ai-kubernetes-agent/frontend/src/services/: api-client.ts
ai-kubernetes-agent/frontend/src/types/: diagnosis.ts
prompts/: 05-end-to-end-integration-prompt.md
