[project]
name = "ai-kubernetes-agent-backend"
version = "0.1.0"
description = "FastAPI orchestrator for AI Kubernetes Troubleshooting Agent (foundation only)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "loguru>=0.7.2",
]

[tool.uvicorn]
factory = true

